style: fixed stamp on mobile

--- a/client/style/components/middle.scss
+++ b/client/style/components/middle.scss
@@ -52,6 +52,9 @@
     aside {
       top: 5vh;
     }
+    .stamp {
+      bottom: 0vh;
+    }
   }
 }
 
